--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="site de exercício - café latte">
         <meta name="namelatte" content="">
 
-        <title>café latte</title>
+        <title>movie past lives</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -92,9 +92,9 @@ https://templatemo.com/tm-588-ebook-landing
 
                         <div class="col-lg-6 col-12 mb-5 pb-5 pb-lg-0 mb-lg-0">
 
-                            <h6>caramel machiatto</h6>
+                            <h6>A movie by Celine Song</h6>
 
-                            <h1 class="text-white mb-4">matcha</h1>
+                            <h1 class="text-white mb-4">Past Lives</h1>
 
                             <a href="#section_2" class="btn custom-btn smoothscroll me-3">Discover More</a>
 
@@ -125,15 +125,15 @@ https://templatemo.com/tm-588-ebook-landing
                                 <img src="images/avatar/studio-portrait-emotional-happy-funny-smiling-boyfriend.jpg" class="img-fluid avatar-image avatar-image-left" alt="">
 
                                 <div class="reviews-group mt-3 mt-lg-0">
-                                    <strong>4.5</strong>
+                                    <strong>5</strong>
 
                                     <i class="bi-star-fill"></i>
                                     <i class="bi-star-fill"></i>
                                     <i class="bi-star-fill"></i>
                                     <i class="bi-star-fill"></i>
-                                    <i class="bi-star"></i>
+                                    <i class="bi-star-fill"></i>
 
-                                    <small class="ms-3">2,564 reviews</small>
+                                    <small class="ms-3">11,000 reviews</small>
                                 </div>
                             </div>
                         </div>
@@ -158,11 +158,11 @@ https://templatemo.com/tm-588-ebook-landing
                                 <h6>Modern &amp; Creative</h6>
 
 
-                                <h2 class="mb-4">About The Book</h2>
+                                <h2 class="mb-4">About The Movie</h2>
 
-                                <p>Credit goes to <a rel="nofollow" href="https://freepik.com" target="_blank">FreePik</a> for images used in this ebook landing page template. You may browse FreePik to download more free images for your website.</p>
+                                <p>Nora and Hae Sung, two deeply connected childhood friends, are wrested apart after Nora's family emigrates from South Korea. Twenty years later, they are reunited for one fateful week as they confront notions of love and destiny.</p>
 
-                                <p>TemplateMo is one of the best websites to download free CSS templates for any purpose. This is an ebook landing page template using Bootstrap 5 CSS layout.</p>
+                                <p></p>
                             </div>
                         </div>
 
@@ -176,9 +176,9 @@ https://templatemo.com/tm-588-ebook-landing
                     <div class="row">
 
                         <div class="col-lg-12 col-12 text-center">
-                            <h6>What's inside?</h6>
+                            <h6>Who's in the movie?</h6>
 
-                            <h2 class="mb-5">Preview at glance</h2>
+                            <h2 class="mb-5">Greta Lee</h2>
                         </div>
 
                         <div class="col-lg-4 col-12">
@@ -200,25 +200,25 @@ https://templatemo.com/tm-588-ebook-landing
                         <div class="col-lg-8 col-12">
                             <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
                                 <div class="scrollspy-example-item" id="item-1">
-                                    <h5>Introducing ebook</h5>
+                                    <h5>Introducing Greta</h5>
 
-                                    <p>This ebook landing page is good to use for any purpose. This layout is based on Bootstrap 5 CSS framework.</p>
+                                    <p>Greta Jiehan Lee (born March 7, 1983) is an American actress. She had supporting roles in the Netflix comedy-drama series Russian Doll (2019–present) and the Apple TV+ drama series The Morning Show (2021–present). She gained prominence for her starring role in the romantic drama film Past Lives (2023), for which she received a nomination for a Golden Globe Award.</p>
 
-                                    <p><strong>What is Content Marketing?</strong> If you are wondering what content marketing is all about, this is the place to start.</p>
+                                    <p><strong>Career:</strong> Lee made her television debut in 2006 playing Heather Kim in the episode "Taboo" in Law and Order: SVU. The following year Lee made her Broadway debut in 2007 as high-achieving, multilingual honor student Marcy Park (replacement) in the musical comedy The 25th Annual Putnam County Spelling Bee. Lee returned to Broadway, portraying Dorine in the David Hirson comedy La Bête (2010) at the Music Box Theatre.[6] Lee acted alongside Mark Rylance, David Hyde Pierce, and Joanna Lumley. She reprised her role in the West End production at the Harold Pinter Theatre.</p>
 
-                                    <blockquote class="blockquote">Lorem Ipsum dolor sit amet, consectetur adipsicing kengan omeg kohm tokito</blockquote>
+                                    <blockquote class="blockquote">There is a word in Korean. In-Yun. It means "providence" or "fate". But it's specifically about relationships between people. I think it comes from Buddhism and reincarnation. It's an In-Yun if two strangers even walk by each other in the street and their clothes accidentally brush. Because it means there must have been something between them in their past lives. If two people get married, they say it's because there have been 8,000 layers of In-Yun over 8,000 lifetimes.</blockquote>
 
-                                    <p>When you need free HTML CSS templates, please visit Templatemo website which provides a variety of templates.</p>
+                                    <p>Lee gained critical acclaim for her starring role in the Celine Song–directed romantic film Past Lives (2023) playing Nora, a woman who reconnects with her childhood friend from Korea.[12] Lee received the award for Best Actress at the Hollywood Critics Association Midseason Film Awards for the role.[13] She also received Golden Globe Award, Independent Spirit Award, Gotham Award, and Critics' Choice Awards nominations for Best Actress.</p>
                                 </div>
 
                                 <div class="scrollspy-example-item" id="item-2">
-                                    <h5>Win back your time</h5>
+                                    <h5>Past Lives Quotes</h5>
 
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p><strong>Hae Sung:<strong> What if this is a past life as well, and we are already something else to each other in our next life? Who do you think we are then?</p>
 
-                                    <p>Sed leo nisl, posuere at molestie ac, suscipit auctor mauris. Etiam quis metus elementum, tempor risus vel, condimentum orci.</p>
+                                    <p><strong>Arthur:<strong> You make my world so much bigger and I'm wondering if I do the same for you?</p>
 
-                                    <p>You are not allowed to redistribute this template ZIP file on any other template collection website. Please contact TemplateMo for more information.</p>
+                                    <p><strong>Arthur:<strong> You dream in a language I can't understand. It's like there's this whole place inside you I can't go.</p>
 
                                     <div class="row">
                                         <div class="col-lg-6 col-12 mb-3">
@@ -230,16 +230,17 @@ https://templatemo.com/tm-588-ebook-landing
                                         </div>
                                     </div>
 
-                                    <p>If you need some specific CSS templates, you can Google with keywords such as templatemo gallery, templatemo digital marketing, etc.</p>
+                                    <p><strong>Hae Sung:<strong> I liked you for who you are; and who you are is a person who leaves.
+Hae Sung: But for him, you're the person who stays</p>
                                 </div>
 
                                 <div class="scrollspy-example-item" id="item-3">
-                                    <h5>Work less, do more</h5>
+                                    <h5>Critics consensus</h5>
 
-                                    <p>Credit goes to <a rel="nofollow" href="https://freepik.com" target="_blank">FreePik</a> for images used in this ebook landing page template. You may browse FreePik to download more free images for your website.</p>
-                                    <p>This is a second paragraph. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                                    <p>A remarkable debut for writer-director Celine Song, Past Lives uses the bonds between its sensitively sketched central characters to support trenchant observations on the human condition.</p>
+                                    <p>Moving in its subtlety, Past Lives is a mature love story that feels powerfully real. </p>
 
-                                    <p>Lorem ipsum dolor sit amet, consive adipisicing elit, sed do eiusmod. tempor incididunt ut labore.</p>
+                                
 
                                     <div class="row align-items-center">
                                         <div class="col-lg-6 col-12">
@@ -247,9 +248,9 @@ https://templatemo.com/tm-588-ebook-landing
                                         </div>
 
                                         <div class="col-lg-6 col-12">
-                                            <p>Modern ebook ever</p>
+                                            <p>Modern movie ever</p>
 
-                                            <p><strong>Lorem ipsum dolor sit amet, consive adipisicing elit, sed do eiusmod. tempor incididunt.</strong></p>
+                                            <p><strong>What a touching story. A very striking way to look at relationships and the ways that love lingers.</strong></p>
                                         </div>
                                     </div>
                                 </div>
