imagens e mudana do site para A Library Of Your Own

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="pt-br">
     <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0TWB79C1GE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0TWB79C1GE');
+</script>
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta name="description" content="site de exercício - café latte">
         <meta name="namelatte" content="">
 
-        <title>movie past lives</title>
+        <title>A Library Of Your Own</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -92,9 +103,9 @@ https://templatemo.com/tm-588-ebook-landing
 
                         <div class="col-lg-6 col-12 mb-5 pb-5 pb-lg-0 mb-lg-0">
 
-                            <h6>A movie by Celine Song</h6>
+                            <h6>reading is life.</h6>
 
-                            <h1 class="text-white mb-4">Past Lives</h1>
+                            <h1 class="text-white mb-4">Bookstore</h1>
 
                             <a href="#section_2" class="btn custom-btn smoothscroll me-3">Discover More</a>
 
@@ -158,9 +169,9 @@ https://templatemo.com/tm-588-ebook-landing
                                 <h6>Modern &amp; Creative</h6>
 
 
-                                <h2 class="mb-4">About The Movie</h2>
+                                <h2 class="mb-4">Everything about books.</h2>
 
-                                <p>Nora and Hae Sung, two deeply connected childhood friends, are wrested apart after Nora's family emigrates from South Korea. Twenty years later, they are reunited for one fateful week as they confront notions of love and destiny.</p>
+                                <p>For the lovers of literature.</p>
 
                                 <p></p>
                             </div>
@@ -176,7 +187,7 @@ https://templatemo.com/tm-588-ebook-landing
                     <div class="row">
 
                         <div class="col-lg-12 col-12 text-center">
-                            <h6>Who's in the movie?</h6>
+                            <h6>non-fiction to literary fiction</h6>
 
                             <h2 class="mb-5">Greta Lee</h2>
                         </div>
@@ -200,11 +211,11 @@ https://templatemo.com/tm-588-ebook-landing
                         <div class="col-lg-8 col-12">
                             <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2" tabindex="0">
                                 <div class="scrollspy-example-item" id="item-1">
-                                    <h5>Introducing Greta</h5>
+                                    <h5>Introducing A Library Of Your Own</h5>
 
-                                    <p>Greta Jiehan Lee (born March 7, 1983) is an American actress. She had supporting roles in the Netflix comedy-drama series Russian Doll (2019–present) and the Apple TV+ drama series The Morning Show (2021–present). She gained prominence for her starring role in the romantic drama film Past Lives (2023), for which she received a nomination for a Golden Globe Award.</p>
+                                    <p>Boks are necessary for growth, and we are here to make you grow</p>
 
-                                    <p><strong>Career:</strong> Lee made her television debut in 2006 playing Heather Kim in the episode "Taboo" in Law and Order: SVU. The following year Lee made her Broadway debut in 2007 as high-achieving, multilingual honor student Marcy Park (replacement) in the musical comedy The 25th Annual Putnam County Spelling Bee. Lee returned to Broadway, portraying Dorine in the David Hirson comedy La Bête (2010) at the Music Box Theatre.[6] Lee acted alongside Mark Rylance, David Hyde Pierce, and Joanna Lumley. She reprised her role in the West End production at the Harold Pinter Theatre.</p>
+                                    <p><strong>A Library Of Your Own</strong> Find your favorite books and give ratings</p>
 
                                     <blockquote class="blockquote">There is a word in Korean. In-Yun. It means "providence" or "fate". But it's specifically about relationships between people. I think it comes from Buddhism and reincarnation. It's an In-Yun if two strangers even walk by each other in the street and their clothes accidentally brush. Because it means there must have been something between them in their past lives. If two people get married, they say it's because there have been 8,000 layers of In-Yun over 8,000 lifetimes.</blockquote>
 
@@ -212,7 +223,7 @@ https://templatemo.com/tm-588-ebook-landing
                                 </div>
 
                                 <div class="scrollspy-example-item" id="item-2">
-                                    <h5>Past Lives Quotes</h5>
+                                    <h5>Book Quotes</h5>
 
                                     <p><strong>Hae Sung:<strong> What if this is a past life as well, and we are already something else to each other in our next life? Who do you think we are then?</p>
 
@@ -237,8 +248,8 @@ Hae Sung: But for him, you're the person who stays</p>
                                 <div class="scrollspy-example-item" id="item-3">
                                     <h5>Critics consensus</h5>
 
-                                    <p>A remarkable debut for writer-director Celine Song, Past Lives uses the bonds between its sensitively sketched central characters to support trenchant observations on the human condition.</p>
-                                    <p>Moving in its subtlety, Past Lives is a mature love story that feels powerfully real. </p>
+                                    <p>Books can change your life.</p>
+                                    <p>And a Library Of Your Own is here to help you</p>
 
                                 
 
@@ -248,9 +259,9 @@ Hae Sung: But for him, you're the person who stays</p>
                                         </div>
 
                                         <div class="col-lg-6 col-12">
-                                            <p>Modern movie ever</p>
+                                            <p>Modern books</p>
 
-                                            <p><strong>What a touching story. A very striking way to look at relationships and the ways that love lingers.</strong></p>
+                                            <p><strong>Touching stories. Very striking stories that help to find a way to look at relationships and the ways that love lingers.</strong></p>
                                         </div>
                                     </div>
                                 </div>
