--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="site de exercício - café latte">
+        <meta name="description" content="site de exercício">
         <meta name="namelatte" content="">
 
         <title>A Library Of Your Own</title>
@@ -189,7 +189,7 @@ https://templatemo.com/tm-588-ebook-landing
                         <div class="col-lg-12 col-12 text-center">
                             <h6>non-fiction to literary fiction</h6>
 
-                            <h2 class="mb-5">Greta Lee</h2>
+                            <h2 class="mb-5">Boostore</h2>
                         </div>
 
                         <div class="col-lg-4 col-12">
